[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treemcts"
version = "0.1.0"
description = "MCTS-based LLM Rollout Collection for Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TreeMCTS Contributors"}
]
keywords = ["mcts", "llm", "reinforcement-learning", "sampling", "rl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.10.0",
    "numpy>=1.21.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.2.0"]
deepspeed = ["deepspeed>=0.10.0"]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.991",
]
all = [
    "vllm>=0.2.0",
    "deepspeed>=0.10.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.991",
]

[project.urls]
Repository = "https://github.com/yourusername/treemcts"
Documentation = "https://github.com/yourusername/treemcts/blob/main/README.md"
Issues = "https://github.com/yourusername/treemcts/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
